# slm_project

./: .gitignore  .rooignore  README.md  __init__.py  all_code_combined.txt  config.py  copilot_code_style.md  deep_fix_training.py  embedding_stats (1).txt  fixed_improved_train.py  improved_train.py  main.py  memo_dataset_tokenizer.md  memo_error.md  memo_optuna.md  preprocess.py  repo2txt.py  reset_git.sh  retry_training.py  setup.py  test_transformer_baseline.py  train_tiny.py  training.py  training_fixes.py  wave_curriculum.py  wiki40b_ja_diffusion_training.ipynb
memo/: LoRAM.md  Papers.md  about_jp_tokenizer.md  custom_prompt.md  for_o1_pro.md  history_of_attention.md  memo1.md  memo2.md  memo3.md  memo4.md  usage_in_colab.md
slm/: README.md  __init__.py  collator.py  compareLM.py  config.py  data_loader.py  data_processor.py  debug_wave.py  diffusion.py  easy_config.py  embedding_stats.txt  evaluation.py  inference.py  main.py  memo.md  model.py  my_config.json  preprocess.py  requirements.txt  run_eval.py  setup.py  tokenizer.py  train.py  train_wiki40b_ja_diffusion.py  train_wiki40b_ja_diffusion_megagon.py  train_wiki40b_ja_diffusion_megagon_fixed.py  train_wiki40b_ja_diffusion_megagon_fixed2.py  trainer.py  training.py  training_fixes.py  utils.py  wiki40b_ja_dataset.py
slm2/: enhanced_wave_models.py  enhanced_wave_network.py  linear_wave_attention.py  main.py  pyproject.toml  test_linear_wave.py  train_linear_wave.py  wave_attention.py  wave_curriculum.py  wave_enhanced_network.py
tests/: __init__.py  run_tests.py  simple_diffusion.py  test_config.py  (+11 more)
(+35 files in other folders)
