[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm"
version = "0.1.0"
description = "プロジェクトの説明"  # Why: プロジェクト概要
readme = "slm/README.md"
requires-python = "==3.11.11"  # How: ColabのPythonバージョンに合わせる
authors = [
    { name = "necococo", email = "kmochidadihcomk@gmail.com" }  
]
dependencies = [
    "torch",
    "numpy",
    "sentencepiece",
    "datasets",
    "pywavelets",
    "huggingface_hub",
    "pytest",
]

[tool.setuptools]
packages = ["slm"]